Fix navbar spacing

--- a/themes/KeepIt/assets/css/_common/_core/layout.scss
+++ b/themes/KeepIt/assets/css/_common/_core/layout.scss
@@ -15,7 +15,9 @@
     // }
 
     height: 4rem;
-    line-height: 4rem;
+    line-height: 1.5rem;
+    padding-top: 1em;
+    
     font-size: 1.1em;
     //font-weight: bold;
     width: 100%;
